exam/8.haproxy - controller/3.app-test-ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
spec:
  tls:
    - hosts:
      - tuanch 
      secretName: tuanchkubeletes-test

    # - hosts:
    #   - otherdomain.coms
    #   secretName: otherssl-ssl
  rules:
  - host: tuanchkubeletes.test
    http:
      paths:
      - path: /
        backend:
          serviceName: http-test-svc
          servicePort: 80
